--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Новый заголовок</h1>
+    <h1>Новый заголовок</h1
+        <p>Новый текст</p>
 </body>
 </html>
