--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Новый заголовок</h1
-        <p>Новый текст</p>
+    <h1>Новый заголовок</h1>
+    <p>Новый текст, который мы немного изменили</p>
+    <p>И добавили новый</p>
 </body>
 </html>
