--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Новый заголовок</h1>
     <p>Новый текст, который мы немного изменили</p>
-    <p>И добавили новый</p>
+    <p>Эти изменения мы делаем уже в новой ветке</p>
 </body>
 </html>
