--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Новый заголовок</h1>
     <p>Новый текст, который мы немного изменили</p>
     <p>Комит 1</p>
+    <p>Commit2</p>
 </body>
 </html>
