--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Новый заголовок</h1>
     <p>Новый текст, который мы немного изменили</p>
+    <p>Новый текст, который мы немного изменили</p>
     <p>Комит 1</p>
     <p>Commit2</p>
 </body>
